# cmd/api/docs/swagger.json
@@ -115,6 +115,12 @@
                             "$ref": "#/definitions/main.request"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request (invalid parameter)",
+                        "schema": {
+                            "$ref": "#/definitions/main.APIEvent"
+                        }
+                    },
                     "401": {
                         "description": "Unauthenticated (missing or invalid Authorization header)",
                         "schema": {
@@ -2636,6 +2642,20 @@
                 }
             }
         },
+        "main.params": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "string"
+                },
+                "reverse": {
+                    "type": "boolean"
+                }
+            }
+        },
         "main.request": {
             "type": "object",
             "properties": {
@@ -2659,6 +2679,9 @@
                 },
                 "method": {
                     "type": "string"
+                },
+                "params": {
+                    "$ref": "#/definitions/main.params"
                 },
                 "proto": {
                     "type": "string"
